[package]
name = "eraser"
version = "0.1.0"
authors = ["Jordan Mele <SiliconSoldier@outlook.com.au>"]
edition = "2021"
rust-version = "1.59.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_common = "0.17.19"
swc_ecma_ast = "0.74.0"
swc_ecma_codegen = "0.102.0"
swc_ecma_parser = "0.99.1"
swc_ecma_transforms_typescript = "0.106.0"
swc_ecma_visit = "0.60.0"
wasm-bindgen = "0.2.79"
